# talkmap

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  schemas.py  session_store.py  ws.py
backend/app/asr/: audio_payload.py  base.py  faster_whisper_engine.py  google_speech_engine.py  groq_whisper_engine.py
backend/app/llm/: base.py  factory.py  ollama_client.py  openai_compatible_client.py
backend/app/prompts/: rolling_summary.txt
backend/app/routes/: export.py
backend/app/services/: summarizer.py  transcribe_stream.py
backend/tests/: test_config.py  test_export.py  test_google_speech_engine.py  test_groq_whisper_engine.py  test_health.py  test_llm_base.py  test_llm_factory.py  test_llm_provider_factory.py  test_ollama_client.py  test_openai_compatible_client.py  test_session_list.py  test_session_store.py  test_session_store_title.py  test_summarizer.py  test_summarizer_title.py  test_transcribe_stream.py  test_ws_contract.py  test_ws_runtime.py
docs/plans/: 2026-03-12-live-runtime-loop.md  2026-03-12-llm-provider-unification-design.md  2026-03-12-llm-provider-unification.md  2026-03-12-realtime-voice-map.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  viteAssets.test.ts
frontend/src/components/: MindMapPane.test.tsx  MindMapPane.tsx  RecorderBar.tsx  SessionHistory.tsx  SummaryPane.tsx  TranscriptPane.tsx
frontend/src/hooks/: useMicrophone.ts  (+3 more)
(+7 files in other folders)
