[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-map-backend"
version = "0.1.0"
description = "Backend bootstrap for Realtime Voice Map"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.9,<3.0",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.1,<2.0",
]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]
